--- a/docs/release-notes/v14.0.1.mdx
+++ b/docs/release-notes/v14.0.1.mdx
@@ -16,15 +16,30 @@ Console SaaS users can try out v14.0.1 latest improvements in Preview! Open a Se
 For self-hosted installations, please read the [following guidelines](#how-to-update-your-console).
 :::
 
-## 
+## Simplified Promotion flow
+
+In a Environment Based Project, you can now decide to promote an environment with the Simplified mode, in order to speed up your flow.
+When this mode is selected, once the Public variables have been chosen, the changes of the chosen Environment will be directly applied in the target Environment. 
+
+To discover more about Environment Configuration Promotion and the Simplified mode, head to the related [documentation page](/).
 
 ## Console
 
 ### Improvements
 
-####
+#### Migration to Env Based available on Project's Advanced tab
+
+From now on, you can start the migration flow to the new Env Based workflow directly form the Advanced tab available in the Project's Settings section.
+
+#### Model used by Mia-Assistant is visible in the chatbot
+
+From now on, information about the model used by Mia-Assistant is visible to users interacting with the chatbot.
 
 ### Bug Fix
+
+This version address the following bug:
+
+* it has been fixed a bug that was showing a blank page when entering the Console for the first time
 
 ## Fast Data
 
