--- a/docs/release-notes/v14.0.1.mdx
+++ b/docs/release-notes/v14.0.1.mdx
@@ -22,7 +22,11 @@ For self-hosted installations, please read the [following guidelines](#how-to-up
 
 ### Improvements
 
-####
+#### Secrets support in Flow Manager Configurator
+
+Starting from version `2.7.0` of the Flow Manager service, it is now possible to instruct the service to use **secrets** in specific parts of the configuration provided via the Configurator.
+
+For details on how to use this feature, please refer to the [official documentation](/development_suite/api-console/api-design/flow-manager-configurator/overview.md#secrets).
 
 ### Bug Fix
 
@@ -32,9 +36,36 @@ For self-hosted installations, please read the [following guidelines](#how-to-up
 
 ## Data Catalog
 
+## Microfrontend Composer
+
+### Back-Lit Library
+
+The new version `v1.5.18` of the back-kit library is available!
+
+Refer to back-kit [changelog](/microfrontend-composer/back-kit/changelog.md) for finer-grained details of new versions.
+
+#### Improvements
+
+##### Support for Title and Content Interpolation in `bk-notifications`
+
+Added possibility to interpolate title and content of the `bk-notifications` component
+
+#### Bug Fix
+
+- Fixed `bk-table` wrong column widths introduced with the new Chrome/Chromium version
+
 ## Marketplace
 
 ### Marketplace Updates
+
+#### Flow Manager Service 2.7.0
+
+The new version `2.7.0` of the Flow Manager Service is available!
+
+The Flow Manager supports the resolution of Kubernetes secrets for a set of configuration properties.
+
+Please refer to the [official documentation](/runtime_suite/flow-manager-service/30_configuration.md#secrets-resolution) for more details.
+
 
 #### FHIR Adapter 1.2.0
 
