add flow manager fix

--- a/docs/release-notes/v14.0.1.mdx
+++ b/docs/release-notes/v14.0.1.mdx
@@ -83,6 +83,9 @@ The Flow Manager supports the resolution of Kubernetes secrets for a set of conf
 
 Please refer to the [official documentation](/runtime_suite/flow-manager-service/30_configuration.md#secrets-resolution) for more details.
 
+##### Fixed
+
+Errors that occur during the deep merge hook execution are now properly logged by the service.
 
 #### FHIR Adapter 1.2.0
 
