--- a/docs/release-notes/v14.0.1.mdx
+++ b/docs/release-notes/v14.0.1.mdx
@@ -21,7 +21,9 @@ For self-hosted installations, please read the [following guidelines](#how-to-up
 In a Environment Based Project, you can now decide to promote an environment with the Simplified mode, in order to speed up your flow.
 When this mode is selected, once the Public variables have been chosen, the changes of the chosen Environment will be directly applied in the target Environment. 
 
-To discover more about Environment Configuration Promotion and the Simplified mode, head to the related [documentation page](/development_suite/set-up-infrastructure/env-based-management#simplified-mode.md).
+![Promotion](img/promotion.png)
+
+To discover more about Environment Configuration Promotion and the Simplified mode, head to the related [documentation page](/development_suite/set-up-infrastructure/env-based-management.md#simplified-mode).
 
 ## Console
 
@@ -95,4 +97,4 @@ This version adds support for bundle transactions, that can be triggered by a re
 
 ## How to update your Console
 
-For self-hosted installations, please head to the [self hosted upgrade guide](/infrastructure/self-hosted/installation-chart/100_how-to-upgrade.md) or contact your Mia-Platform referent and upgrade to _Console Helm Chart_ `vX.X.X`.
+For self-hosted installations, please head to the [self hosted upgrade guide](/infrastructure/self-hosted/installation-chart/100_how-to-upgrade.md) or contact your Mia-Platform referent and upgrade to _Console Helm Chart_ `v14.2.2-beta.0`.
