--- a/docs/release-notes/v14.0.1.mdx
+++ b/docs/release-notes/v14.0.1.mdx
@@ -21,7 +21,11 @@ For self-hosted installations, please read the [following guidelines](#how-to-up
 In a Environment Based Project, you can now decide to promote an environment with the Simplified mode, in order to speed up your flow.
 When this mode is selected, once the Public variables have been chosen, the changes of the chosen Environment will be directly applied in the target Environment. 
 
+<div style={{width: '400px', maxWidth: '100%', display: 'flex', alignItems: 'center', borderRadius: '4px', overflow: 'hidden'}}>
+
 ![Promotion](img/promotion.png)
+
+</div>
 
 To discover more about Environment Configuration Promotion and the Simplified mode, head to the related [documentation page](/development_suite/set-up-infrastructure/env-based-management.md#simplified-mode).
 
