--- a/docs/release-notes/v14.0.1.md
+++ b/docs/release-notes/v14.0.1.md
@@ -5,16 +5,7 @@ sidebar_label: v14.0.1
 image: "img/release-note-link-preview.png"
 ---
 
-_June 12th, 2025_
-
-:::info
-
-Mia-Platform Console v14.0.1 is **now in Preview** and will be generally available on June 26th.
-
-Console SaaS users can try out v14.0.1 latest improvements in Preview! Open a Service Request to ask for the creation of a sandbox Company in case you do not have access to any Company.
-
-For self-hosted installations, please read the [following guidelines](#how-to-update-your-console).
-:::
+_June 26th, 2025_
 
 ## Simplified Promotion flow
 
@@ -95,4 +86,4 @@ This version adds support for bundle transactions, that can be triggered by a re
 
 ## How to update your Console
 
-For self-hosted installations, please head to the [self hosted upgrade guide](/infrastructure/self-hosted/installation-chart/100_how-to-upgrade.md) or contact your Mia-Platform referent and upgrade to _Console Helm Chart_ `v14.2.2-beta.0`.
+For self-hosted installations, please head to the [self hosted upgrade guide](/infrastructure/self-hosted/installation-chart/100_how-to-upgrade.md) or contact your Mia-Platform referent and upgrade to _Console Helm Chart_ `v14.2.2`.
