--- a/docs/data_catalog/frontend/data_catalog_assets.mdx
+++ b/docs/data_catalog/frontend/data_catalog_assets.mdx
@@ -336,7 +336,13 @@ Within both Sor and table detail pages, users can export the metadata associated
   * in the **SoR Detail Page**, accessing the `Tables` tab, user can export the list of all tables metadata which belongs to the SoR.
   * in the **Table Detail Page**, accessing the `Columns` tab, user can export the list of all columns metadata belonging to the table.
 
-img
+<div style={{display: 'flex', justifyContent: 'center'}}>
+  <div style={{display: 'flex', width: '700px'}}>
+
+![Export from Asset Detail Pages](./../img/export_from_detail_page.png)
+
+  </div>
+</div>
 
 #### Export from Search Results
 
@@ -344,4 +350,10 @@ From the search results page, users can export metadata for all assets returned 
 To export the entire list of returned assets, user have to select all the listed assets, then click to `Export metadata` button.  
 Alternatively, it is also possible to select only some of the returned assets and then click the `Export metadata` button, in order to obtain a more granular exported content.
 
-img
+<div style={{display: 'flex', justifyContent: 'center'}}>
+  <div style={{display: 'flex', width: '700px'}}>
+
+![Export from Search Results](./../img/export_search_results.png)
+
+  </div>
+</div>
