--- a/docs/release-notes/v14.0.2.md
+++ b/docs/release-notes/v14.0.2.md
@@ -27,7 +27,7 @@ For self-hosted installations, please read the [following guidelines](#how-to-up
 Users can now define a list of rules that allow a specific action in Design by specificing an `allowedRuleSet`. By doing so, only changes explicitly permitted by these rules are allowed, while all others are denied.
 Discover more about this improvement to the Fine-Grained Access Control functionality in the [dedicated documentation](/development_suite/api-console/api-design/fine-grained-access-control.md).
 
-#### Define multiple actions controlled by the rule defined via `processingOptions` on Fine-Grained Access Control
+#### Define multiple actions for a single rule on Fine-Grained Access Control
 
 Users can now define more rules as an array of strings on the actions field of the processingOptions object for the Fine-Grained Access Control functionality.
 You can discover more about this feature in the related [documentation page](/development_suite/api-console/api-design/fine-grained-access-control.md).
