--- a/docs/release-notes/v14.0.2.md
+++ b/docs/release-notes/v14.0.2.md
@@ -29,7 +29,7 @@ Discover more about this improvement to the Fine-Grained Access Control function
 
 #### Define multiple actions for a single rule on Fine-Grained Access Control
 
-Users can now define more rules as an array of strings on the actions field of the processingOptions object for the Fine-Grained Access Control functionality.
+Users can now configure rules for the Fine-Grained Access Control specifying multiple actions for a single rule.
 You can discover more about this feature in the related [documentation page](/development_suite/api-console/api-design/fine-grained-access-control.md).
 
 ### Bug Fix
