--- a/docs/release-notes/v14.0.2.md
+++ b/docs/release-notes/v14.0.2.md
@@ -34,6 +34,10 @@ You can discover more about this feature in the related [documentation page](/de
 
 ### Bug Fix
 
+This version addressed the following bugs:
+
+* Fixed issue with project creation when the blueprint uses different values for envPrefix and envId. Before this fix, the created project would have both values set to the same envId from the Company blueprint, while envPrefix was not being applied correctly.
+
 ## Microfrontend Composer
 
 ### Back-Lit Library
