add oatuh login site

--- a/docs/release-notes/v14.0.2.md
+++ b/docs/release-notes/v14.0.2.md
@@ -38,21 +38,13 @@ This version addresses the following bugs:
 
 * Fixed issue with project creation when the blueprint uses different values for envPrefix and envId. Before this fix, the created project would have both values set to the same envId from the Company blueprint, while envPrefix was not being applied correctly.
 
-## Microfrontend Composer
-
-### Back-Lit Library
-
-#### Improvements
-
-##### 
-
-#### Bug Fix
-
 ## Marketplace
 
 ### Marketplace Updates
 
-#### 
+#### Oauth Login Site 8.1.3
+
+Oauth Login Site is now available as a Marketplace plugin. Check the [documentation](/runtime_suite/oauth-login-site/10_overview.md) for more details.
 
 ##### Fixed
 
