added export feature to RN

--- a/docs/release-notes/v14.0.2.md
+++ b/docs/release-notes/v14.0.2.md
@@ -38,6 +38,28 @@ This version addresses the following bugs:
 
 * Fixed issue with project creation when the blueprint uses different values for envPrefix and envId. Before this fix, the created project would have both values set to the same envId from the Company blueprint, while envPrefix was not being applied correctly.
 
+## Data Catalog
+
+### Export metadata
+
+The new Export Metadata feature enables to easily extract your data assets metadata directly from the Data Catalog UI.  
+The supported export format is `.csv`, ideal for tabular data and easy integration with tools like Excel, Google Spreadsheets and business intelligence software.
+This feature is particularly useful to share metadata outside the Data Catalog, such as for offline analysis and for third-party stakeholders that may not have access to the Data Catalog instance itself.  
+It is possible to perform export **from asset detail pages** or directly **from search results**.  
+
+:::info
+Export feature is supported starting by versions:
+* Fabric BFF - v0.3.4
+* Open Lineage - v0.3.8
+* Job Runner - v0.2.2
+* Data Catalog Frontend - v0.3.4
+* Fabric Admin - v0.5.3
+
+For more information, check the Data Catalog [compatibility matrix](/data_catalog/compatibility_matrix.md).
+:::
+
+Check the full list of capabilities of export feature in the specific [documentation page](/data_catalog/frontend/data_catalog_assets.mdx#export-metadata).
+
 ## Marketplace
 
 ### Marketplace Updates
