Apply suggestions from code review
add final fixes

--- a/docs/data_catalog/frontend/data_catalog_assets.mdx
+++ b/docs/data_catalog/frontend/data_catalog_assets.mdx
@@ -317,10 +317,12 @@ This feature is particularly useful to share metadata outside the Data Catalog, 
 The export metadata feature is designed to be intuitive and accessible from key navigation points: the search assets page, and within the specific asset detail page.
 The exported `.csv` file is characterized by a standard structure, involving the following information displayed in the file header:
 
-  * **Default asset fields**, useful to univocally identify a specific asset (`Asset ID`,`Asset Type`,`System of Record`,`Catalog Name`,`Schema`,`Table`,`Column`)
+  * **Default asset fields**, useful to univocally identify a specific asset (`Asset Type`,`System of Record`,`Catalog Name`,`Schema`,`Table`,`Column`)
   * **Common standard properties**, `description`, `tags`, as they are in common for all Data Catalog asset types
   * **Custom properties**, based on the custom properties management and metadata enrichment performed by users. The exported file will include all custom properties valorized in the assets which have been exported. For each custom property, in the `.csv` file is also reported the `custom property type`. This allows users to better understand the context of each custom property in relation to the asset.
-
+:::note
+When importing the `.csv` file into a spreadsheet, please ensure you set the delimiter to *semicolon (;)* for correct parsing of the file structure.
+:::
 :::caution
 *Unknown custom properties* found during the export process will be included in the `.csv` file too, but no `custom property type` will be present for them.
 :::
