--- a/docs/release-notes/v14.0.2.md
+++ b/docs/release-notes/v14.0.2.md
@@ -55,6 +55,10 @@ Export feature is supported starting by versions:
 * Data Catalog Frontend - v0.3.4
 * Fabric Admin - v0.5.3
 
+Then, two new routes have been introduced:
+* GET `/assets/export`
+* POST `/assets/export/init`
+
 For more information, check the Data Catalog [compatibility matrix](/data_catalog/compatibility_matrix.md).
 :::
 
