--- a/docs/release-notes/v14.0.2.md
+++ b/docs/release-notes/v14.0.2.md
@@ -70,7 +70,7 @@ Check the full list of capabilities of export feature in the specific [documenta
 
 #### Oauth Login Site 8.1.3
 
-Oauth Login Site is now available as a Marketplace plugin. Check the [documentation](/runtime_suite/oauth-login-site/10_overview.md) for more details.
+Oauth Login Site is now available as a Marketplace plugin. Check the [documentation](/runtime_suite/oauth-login-site/10_overview.md) and service [changelog](/runtime_suite/oauth-login-site/changelog.md) for more details.
 
 ##### Fixed
 
