--- a/docs/release-notes/v14.0.2.md
+++ b/docs/release-notes/v14.0.2.md
@@ -18,6 +18,10 @@ For self-hosted installations, please read the [following guidelines](#how-to-up
 
 ## Deploy History for Infrastructure Projects
 
+From now on, Deploy history is available for Infrastructure Projects as well. You can track past deploys of your infrastructure components directly in the Deploy section, with full visibility into status, deployed component name, date & time, git commit ID, duration, and access to logs.
+
+For more information, visit the [Infrastructure Projects documentation page](/console/project-configuration/infrastructure-project.md#deploy-history)
+
 ## Console
 
 ### Improvements
