added image on RN

--- a/docs/release-notes/v14.0.2.md
+++ b/docs/release-notes/v14.0.2.md
@@ -22,6 +22,8 @@ From now on, Deploy history is available for Infrastructure Projects as well. Yo
 
 For more information, visit the [Infrastructure Projects documentation page](/console/project-configuration/infrastructure-project.md#deploy-history)
 
+![Infrastructure project deploy history](img/infrastructure-project-deploy-history.png)
+
 ## Console
 
 ### Improvements
