docs: add empty dir docs

--- a/docs/release-notes/v14.0.1.md
+++ b/docs/release-notes/v14.0.1.md
@@ -58,6 +58,10 @@ Refer to back-kit [changelog](/microfrontend-composer/back-kit/changelog.md) for
 
 Added possibility to interpolate title and content of the `bk-notifications` component
 
+##### Support for Empty Dir volumes
+
+Added support to specify an empty dir mount point for a service and/or its additional containers
+
 #### Bug Fix
 
 - Fixed `bk-table` wrong column widths introduced with the new Chrome/Chromium version
