fix: move rn section under the correct spot

--- a/docs/release-notes/v14.0.1.md
+++ b/docs/release-notes/v14.0.1.md
@@ -38,6 +38,10 @@ Starting from version `2.7.0` of the Flow Manager service, it is now possible to
 
 For details on how to use this feature, please refer to the [official documentation](/development_suite/api-console/api-design/flow-manager-configurator/overview.md#secrets).
 
+#### Support for Empty Dir volumes
+
+Added support to specify an empty dir mount point for a service and/or its additional containers
+
 ### Bug Fix
 
 This version address the following bug:
@@ -57,10 +61,6 @@ Refer to back-kit [changelog](/microfrontend-composer/back-kit/changelog.md) for
 ##### Support for Title and Content Interpolation in `bk-notifications`
 
 Added possibility to interpolate title and content of the `bk-notifications` component
-
-##### Support for Empty Dir volumes
-
-Added support to specify an empty dir mount point for a service and/or its additional containers
 
 #### Bug Fix
 
