--- a/docs/release-notes/v14.0.1.md
+++ b/docs/release-notes/v14.0.1.md
@@ -38,6 +38,10 @@ Starting from version `2.7.0` of the Flow Manager service, it is now possible to
 
 For details on how to use this feature, please refer to the [official documentation](/development_suite/api-console/api-design/flow-manager-configurator/overview.md#secrets).
 
+#### Support for Empty Dir volumes
+
+Added support to specify an empty dir mount point for a service and/or its additional containers
+
 ### Bug Fix
 
 This version address the following bug:
