--- a/docs/release-notes/v14.0.2.md
+++ b/docs/release-notes/v14.0.2.md
@@ -5,16 +5,7 @@ sidebar_label: v14.0.2
 image: "img/release-note-link-preview.png"
 ---
 
-_June 26th, 2025_
-
-:::info
-
-Mia-Platform Console v14.0.2 is **now in Preview** and will be generally available on July 10th.
-
-Console SaaS users can try out v14.0.2 latest improvements in Preview! Open a Service Request to ask for the creation of a sandbox Company in case you do not have access to any Company.
-
-For self-hosted installations, please read the [following guidelines](#how-to-update-your-console).
-:::
+_July 10th, 2025_
 
 ## Deploy History for Infrastructure Projects
 
