added feature on RN

--- a/docs/release-notes/v14.0.3.md
+++ b/docs/release-notes/v14.0.3.md
@@ -16,7 +16,15 @@ Console SaaS users can try out v14.0.3 latest improvements in Preview! Open a Se
 For self-hosted installations, please read the [following guidelines](#how-to-update-your-console).
 :::
 
-## 
+## Specify default Git Provider visibility for Project creation
+
+For a Git Provider, you can now select the default visibility for the repositories created in such Provider. This will be inherited when creating a new Project.
+
+<div style={{width: '400px', maxWidth: '100%', display: 'flex', alignItems: 'center', borderRadius: '4px', overflow: 'hidden'}}>
+
+![Provider Default Visibility](img/provider-default-visibility.png)
+
+</div>
 
 ## Console
 
