--- a/docs/console/company-configuration/providers/configure-provider.mdx
+++ b/docs/console/company-configuration/providers/configure-provider.mdx
@@ -66,13 +66,15 @@ In this step, you can insert some general details about your provider:
 
 <a name="repositoryPathTemplate"></a>
 
-If in [Step 1](#step-1-provider-services) the **Git Provider** capability has been selected, an additional **Repository path template** field will appear in this step. This field controls where Project repositories, created using this provider, will be located, and can also contain a special interpolation variable `{{projectId}}` that will be replaced with the actual Project identifier during the [Project creation](/console/project-configuration/create-a-project.mdx) phase.
+If in [Step 1](#step-1-provider-services) the **Git Provider** capability has been selected, two additional fields will appear in this step. The first one is the **Repository path template**. This field controls where Project repositories, created using this provider, will be located, and can also contain a special interpolation variable `{{projectId}}` that will be replaced with the actual Project identifier during the [Project creation](/console/project-configuration/create-a-project.mdx) phase.
 
 :::info
 The **Repository path template** field identifies the path where your project configuration repository will be created. 
 It must follow the hierarchical structure of each **Git Provider** so it will be different for different providers. 
 More information about how to configure it for the specific provider in the table below.
 :::
+
+The second additional field is the **Default visibility for repositories**. In this field you can select the default visibility for the repositories created in such Git Provider, by choosing among Internal, Public or Private visibility. This choice will be inherited in the Project creation flow, when selecting the Git Provider.
 
 Below, some examples on the data to set for the supported provider types:
 
