--- a/docs/release-notes/v14.0.3.md
+++ b/docs/release-notes/v14.0.3.md
@@ -26,9 +26,14 @@ For a Git Provider, you can now select the default visibility for the repositori
 
 </div>
 
-## Data Catalog
+## Fast Data
 
-### 
+### Introducing Mongezium: MongoDB to Kafka CDC Connector
+
+**Mongezium** is a CDC (Change Data Capture) connector that captures changes in MongoDB collections and push them to Kafka topics.  
+Mongezium uses MongoDB change streams to listen for changes in the collections and maps MongoDB events into schemaless [Debezium-like messages](https://debezium.io/documentation/reference/stable/connectors/mongodb.html#mongodb-events).  
+Mongezium can be configured with different startup behaviors, such as performing always an initial snapshot on startup, or resuming the change stream from the last known resume token.  
+To know more about how to configure Mongezium CDC, visit the [official documentation](/runtime_suite/mongezium-cdc/10_overview.md).
 
 ## Marketplace
 
