add backkit fix

--- a/docs/release-notes/v14.0.3.md
+++ b/docs/release-notes/v14.0.3.md
@@ -35,6 +35,18 @@ Mongezium uses MongoDB change streams to listen for changes in the collections a
 Mongezium can be configured with different startup behaviors, such as performing always an initial snapshot on startup, or resuming the change stream from the last known resume token.  
 To know more about how to configure Mongezium CDC, visit the [official documentation](/runtime_suite/mongezium-cdc/10_overview.md).
 
+## Microfrontend Composer
+
+### Back-Lit Library
+
+The new version `v1.5.19` of the back-kit library is available!
+
+Refer to back-kit [changelog](/microfrontend-composer/back-kit/changelog.md) for finer-grained details of new versions.
+
+#### Bug Fix
+
+- `bk-form-wizard` now sends correct data when field is an array of strings
+
 ## Marketplace
 
 ### Marketplace Updates
