--- a/docs/release-notes/v14.0.3.md
+++ b/docs/release-notes/v14.0.3.md
@@ -47,12 +47,6 @@ Refer to back-kit [changelog](/microfrontend-composer/back-kit/changelog.md) for
 
 - `bk-form-wizard` now sends correct data when field is an array of strings
 
-## Marketplace
-
-### Marketplace Updates
-
-####
-
 ## How to update your Console
 
-For self-hosted installations, please head to the [self hosted upgrade guide](/infrastructure/self-hosted/installation-chart/100_how-to-upgrade.md) or contact your Mia-Platform referent and upgrade to _Console Helm Chart_ `vX.X.X-beta.0`.
+For self-hosted installations, please head to the [self hosted upgrade guide](/infrastructure/self-hosted/installation-chart/100_how-to-upgrade.md) or contact your Mia-Platform referent and upgrade to _Console Helm Chart_ `v14.2.4-beta.0`.
