--- a/docs/release-notes/v14.0.3.md
+++ b/docs/release-notes/v14.0.3.md
@@ -5,16 +5,7 @@ sidebar_label: v14.0.3
 image: "img/release-note-link-preview.png"
 ---
 
-_July 10th, 2025_
-
-:::info
-
-Mia-Platform Console v14.0.3 is **now in Preview** and will be generally available on July 24th.
-
-Console SaaS users can try out v14.0.3 latest improvements in Preview! Open a Service Request to ask for the creation of a sandbox Company in case you do not have access to any Company.
-
-For self-hosted installations, please read the [following guidelines](#how-to-update-your-console).
-:::
+_July 24th, 2025_
 
 ## Specify default Git Provider visibility for Project creation
 
@@ -49,4 +40,4 @@ Refer to back-kit [changelog](/microfrontend-composer/back-kit/changelog.md) for
 
 ## How to update your Console
 
-For self-hosted installations, please head to the [self hosted upgrade guide](/infrastructure/self-hosted/installation-chart/100_how-to-upgrade.md) or contact your Mia-Platform referent and upgrade to _Console Helm Chart_ `v14.2.4-beta.0`.
+For self-hosted installations, please head to the [self hosted upgrade guide](/infrastructure/self-hosted/installation-chart/100_how-to-upgrade.md) or contact your Mia-Platform referent and upgrade to _Console Helm Chart_ `v14.2.4`.
