--- a/docs/release-notes/v14.1.0.md
+++ b/docs/release-notes/v14.1.0.md
@@ -30,6 +30,18 @@ For self-hosted installations, please read the [following guidelines](#how-to-up
 
 ### 
 
+## Marketplace
+
+### Marketplace Updates
+
+#### Integration Connector Agent 0.4.0
+
+The Integration Connector Agent received new updates to enable:
+
+- aggregating information from Cloud Vendors (specifically GCP, AWS and Azure)
+- receiving events from GitHub webhooks
+- build custom processors with Golang code, thanks to the new `rpc-plugin` processors and the [Integration Connector Agent Processor Template](https://github.com/mia-platform-marketplace/integration-connector-agent-processor)
+
 ## How to update your Console
 
 For self-hosted installations, please head to the [self hosted upgrade guide](/infrastructure/self-hosted/installation-chart/100_how-to-upgrade.md) or contact your Mia-Platform referent and upgrade to _Console Helm Chart_ `vX.X.X-beta.0`.
