--- a/docs/console/tutorials/infrastructure-project/visualize-infrastructure-project-components-runtime-data-in-console.mdx
+++ b/docs/console/tutorials/infrastructure-project/visualize-infrastructure-project-components-runtime-data-in-console.mdx
@@ -315,4 +315,4 @@ Now that we have configured everything needed to gather runtime data and push it
 
 You can create a new [Composer page Extension](/console/company-configuration/extensions.md) in your Company using the *Infrastructure Component Runtime Catalog Table* template.
 
-![Create composer extension modal highligthing Infrastructure Component Runtime Catalog Table template](./img/visualize-infra-composer-extension-creation.png)
+![Create composer extension modal highlighting Infrastructure Component Runtime Catalog Table template](./img/visualize-infra-composer-extension-creation.png)
