docs: temp notice

--- a/docs/console/tutorials/infrastructure-project/visualize-infrastructure-project-components-runtime-data-in-console.mdx
+++ b/docs/console/tutorials/infrastructure-project/visualize-infrastructure-project-components-runtime-data-in-console.mdx
@@ -43,10 +43,9 @@ As mentioned above, we will need to create some resources in the Cloud Provider 
 Every Cloud Provider has its own way to send events, so you will have to follow the specific instructions for your Cloud Provider.
 
 :::tip
-In order to create such resources we have created a Terraform module that will help you preparing the cloud provider environment.
+In order to create such resources we have created a set of Terraform modules that will help you preparing the cloud provider environment.
 
-You can find the modules in the following repository
-TODO: LINK HERE
+Ask your Mia-Platform referent to get access to it!
 :::
 
 <Tabs>
