fix: better introduction

--- a/docs/console/tutorials/infrastructure-project/visualize-infrastructure-project-components-runtime-data-in-console.mdx
+++ b/docs/console/tutorials/infrastructure-project/visualize-infrastructure-project-components-runtime-data-in-console.mdx
@@ -12,8 +12,7 @@ This tutorial will show you how to collect runtime data from your cloud provider
 The tutorial assumes you have the following prerequisites in place:
 
 - you have created an [Infrastructure Project](/console/project-configuration/infrastructure-project.md#creating-an-infrastructure-project)
-- you are using a supported Provider (see [this page](/console/project-configuration/infrastructure-project.md#technical-limitations))
-- you have a repository with a [Terraform](https://www.hashicorp.com/en/products/terraform)/[OpenTofu](https://opentofu.org/) project in place that can produce a terraform plan file using the `show` command
+- you have access to an [Application Project](/console/project-configuration/application-project.md) where you can create new microservices
 
 ## Architectural overview
 
